# university-collection

./: README.md
Low_Level_HW_1/: README.md
RealTime_Embedded_Systems/: .gitignore  CMakeLists.txt  README.md  toolchain-aarch64.cmake
RealTime_Embedded_Systems/performance/: README.md  system_metrics.csv  websocket_config.json
RealTime_Embedded_Systems/performance/csv/: AAL_records.csv  AAL_statistics.csv  AAPL_records.csv  AAPL_statistics.csv  AMD_records.csv  AMD_statistics.csv  AMZN_records.csv  AMZN_statistics.csv  ASTS_records.csv  ASTS_statistics.csv  AVGO_records.csv  AVGO_statistics.csv  BAC_records.csv  BAC_statistics.csv  BBD_records.csv  BBD_statistics.csv  BCS_records.csv  BCS_statistics.csv  BINANCE:ADAUSDT_records.csv  BINANCE:ADAUSDT_statistics.csv  BINANCE:BNBUSDT_records.csv  BINANCE:BNBUSDT_statistics.csv  BINANCE:BTCUSDT_records.csv  BINANCE:BTCUSDT_statistics.csv  BINANCE:DOGEUSDT_records.csv  BINANCE:DOGEUSDT_statistics.csv  BINANCE:DOTUSDT_records.csv  BINANCE:DOTUSDT_statistics.csv  BINANCE:ETHUSDT_records.csv  BINANCE:ETHUSDT_statistics.csv  BINANCE:SHIBUSDT_records.csv  BINANCE:SHIBUSDT_statistics.csv  BINANCE:SOLUSDT_records.csv  BINANCE:SOLUSDT_statistics.csv  BINANCE:USDCUSDT_records.csv  BINANCE:USDCUSDT_statistics.csv  BINANCE:XRPUSDT_records.csv  BINANCE:XRPUSDT_statistics.csv  DJT_records.csv  DJT_statistics.csv  (+60 more)
RealTime_Embedded_Systems/report/: rtes_report.tex
RealTime_Embedded_Systems/scripts/: add_records_header.py  add_records_headers.py  add_statistics_header.py  add_statistics_headers.py  check_nan.py  data_times.py  purge_files.py  recording_delays.py  statistics_delays.py  validate_results.py
RealTime_Embedded_Systems/src/: config.cpp  config.hpp  files.hpp  finnhub_client.cpp  finnhub_client.hpp  finnhub_data.cpp  finnhub_data.hpp  logger.hpp  main.cpp  queued_worker.hpp  queued_worker.ipp  system_metrics.hpp  tasks.cpp  tasks.hpp  thread_safe_queue.cpp  thread_safe_queue.hpp  timed_worker.cpp  timed_worker.hpp  timestamps.hpp  worker_setup.hpp
(+51 files in other folders)
